Fixed post alignment

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ button{
 
 .story-pic{
     align-items: center;
+    cursor: pointer;
 }
 
 .story-pic img{
@@ -192,7 +193,7 @@ button{
 .post-wrapper {
     width: 100%;
     height: 100%;
-    left: 70%;
+    left: 60%;
     margin: 0 auto;
     top: 140%;
     transform: translate(-50%,-50%);
